--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,22 @@
+
 {
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "headers": {
-        "Access-Control-Allow-Origin": "http://localhost:5173",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization",
-        "Access-Control-Allow-Credentials": "true"
-      },
-      "dest": "index.js"
-    }
-  ]
+       "src": "/(.*)",
+       "dest": "index.js",
+        "methods": ["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+           "Access-Control-Allow-Origin": "*",
+           "Access-Control-Allow-Credentials": "true",
+           "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+       }
+   }
+ ]
 }
